BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_RetryMechanism__c.object
<CustomObject>
    <description>This object captures the exponential retry details. This object can be enhanced to other objects where we need a callout to be made exponentially for failed records.</description>
    <fields>
        <fullName>Hsvc_AssociatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This relationship was created for the relocation retry mechanism where all install cases need an exponential retry to IP for FSO ID</description>
        <label>Associated Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Retry Mechanisms</relationshipLabel>
        <relationshipName>Retry_Mechanisms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hsvc_AutoRetryCounter__c</fullName>
        <description>Maintains the current auto retry count for the record</description>
        <label>Auto Retry Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_EndDate__c</fullName>
        <label>Retry End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hsvc_MarkedComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked as true, the associated record will not be picked for integration again</description>
        <label>Marked Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hsvc_RetryCount__c</fullName>
        <description>Maintains the number of times the auto retry batch has run since the time of creation of the associated record</description>
        <label>Num times batch ran since record created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_StartDate__c</fullName>
        <label>Retry Start Date</label>
        <type>Date</type>
    </fields>
    <label>Retry Mechanism</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hsvc_AssociatedCase__c</columns>
        <columns>Hsvc_AutoRetryCounter__c</columns>
        <columns>Hsvc_EndDate__c</columns>
        <columns>Hsvc_MarkedComplete__c</columns>
        <columns>Hsvc_RetryCount__c</columns>
        <columns>Hsvc_StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>Hsvc_RetryMechanism Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retry Mechanisms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>